# mrc-workout-creator

./: .gitlint-configuration  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
crm-examples/: percentage.mrc  watts.mrc
mrc-examples/: percentage.mrc
src/: lib.rs  main.rs  testing.rs
src/gui/: crm_creator.rs  mod.rs  mrc_creator.rs  style.rs  workout_type.rs
src/gui/workout_definition/: app.rs  elements.rs  mod.rs
src/gui/workout_design/: app.rs  elements.rs  mod.rs  visualization.rs
src/gui/workout_design/visualization/: colors.rs  core.rs  mod.rs
src/workout/: workout.rs
src/workout_data/: effort.rs  from_mrc.rs  from_plan_format.rs  mod.rs  positive_float.rs  workout.rs
src/workout_definition/: mod.rs  positive_float.rs  workout.rs
tests/: create_workout.rs  test-workout.plan  workout_to_crm_string.rs
