[package]
authors = ["Tim Toebrock"]
description = """
Create workouts in the MRC format.
"""
edition = "2021"
license = "MIT"
name = "mrc-workout-creator"
version = "0.5.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
iced = {version = "0.10.0", features = ["async-std", "debug", "canvas"]}
iced_core = "0.10.0"
iced_native = {version = "0.10.3"}
regex = "1.9.0"
rfd = "0.12.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-std = "1.0"
directories-next = "2.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-timer = "0.2"
web-sys = {version = "0.3", features = ["Window", "Storage"]}
