[package]
authors = ["Tim Toebrock"]
description = """
Create workouts in the MRC format.
"""
edition = "2021"
license = "MIT"
name = "mrc-workout-creator"
version = "0.8.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0"
iced = { version = "0.12.1", features = ["async-std", "debug", "canvas"] }
iced_core = "0.12.1"
regex = "1.10"
rfd = "0.13"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-std = "1.12"
directories-next = "2.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-timer = "0.2"
web-sys = { version = "0.3", features = ["Window", "Storage"] }
